--- a/html-forms.html
+++ b/html-forms.html
@@ -17,26 +17,19 @@
 </div>
 
 <fieldset>
-<legend>How did you first hear about Carboot.com?</legend>
-<div>
-   <input type="radio" id="friend" name="hear" value="friend">
-   <label for="friend">Friend or Family Member</label>
-</div>
-<div>
-   <input type="radio" id="website" name="hear" value="website">
-   <label for="website">Website</label>
-</div>
-<div>
-   <input type="radio" id="magazine" name="hear" value="magazine advert">
-   <label for="magazine">Newspaper/Magazine Advert</label>
-</div>
-<div>
-   <input type="radio" id="tv" name="hear" value="tv advert">
-   <label for="tv">TV</label>
-</div>
+<legend>What is the capital of Venezuala?</legend>
+<label for="lima">Lima</label>
+<input type="radio" name="question" id="lima" value="Lima">
+<label for="caracas">Caracas</label>
+<input type="radio" name="question" id="caracas" value="Caracas">
+<label for="buenos">Buenos Aires</label>
+<input type="radio" name="question" id="buenos" value="Buenos Aires">
+<label for="sucre">Sucre</label>
+<input type="radio" name="question" id="sucre" value="Sucre">
 </fieldset>
 
-<input type="submit" value="Submit the form" name="submit">
+
+<input type="submit" value="Submit answer" name="submit">
 </form>
 
 </body>
